// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Snapshot Tests ButtonContainer 1`] = `
<View
  style={
    Object {
      "borderTopColor": "#000",
      "borderTopWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "padding": 16,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#000",
        "borderRadius": 8,
        "borderWidth": 2,
        "color": "#000",
        "flexGrow": 1,
        "fontSize": 16,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Journal
    </Text>
  </View>
  <View
    style={
      Object {
        "width": 8,
      }
    }
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#000",
        "borderRadius": 8,
        "borderWidth": 2,
        "color": "#000",
        "flexGrow": 1,
        "fontSize": 16,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      Gratitude
    </Text>
  </View>
</View>
`;

exports[`Component Snapshot Tests HeavyText 1`] = `
<Text
  style={
    Object {
      "fontSize": 16,
      "fontWeight": "bold",
    }
  }
>
  October 5, 2022
</Text>
`;

exports[`Component Snapshot Tests LightText 1`] = `
<Text
  style={
    Object {
      "fontSize": 12,
      "fontWeight": "normal",
      "opacity": 0.5,
    }
  }
>
  5:04pm
</Text>
`;

exports[`Component Snapshot Tests NormalText 1`] = `
<Text
  style={
    Object {
      "fontSize": 16,
      "fontWeight": "normal",
    }
  }
>
  Exerted enterence focus hear him
</Text>
`;

exports[`Component Snapshot Tests PrimaryButton 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#000",
      "borderRadius": 8,
      "borderWidth": 2,
      "color": "#000",
      "flexGrow": 1,
      "fontSize": 16,
      "padding": 16,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 16,
        "fontWeight": "bold",
      }
    }
  >
    Journal
  </Text>
</View>
`;
